[package]
name = "minesweeper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"] # What is crate type?

[dependencies]
wasm-bindgen = "0.2.80"

[target.'cfg(not(target_family = "wasm"))'.dependencies] # rand isn't supported by wasm
rand = "0.8.5"
